# sensor-vision

./: Cargo.toml  LICENSE  README.md  client_workflows.puml
client_workflows/: create_client.puml  create_metrics.puml  create_sensor.puml  delete_metric.puml  delete_sensor.puml  describe_metric.puml  load_metadata.puml  push_values.puml  setup_new_certificate.puml  update_metric.puml  update_sensor.puml
diagrams/: components.puml  state.puml
examples/: actix_test.rs  async_client.rs
src/: lib.rs  main.rs  utils.rs
src/app/: app.rs  app_state.rs  dialog.rs  events.rs  livedata.rs  mod.rs  render.rs  tui.rs  ui_state.rs  widgets.rs
src/client/: client.rs  client_queries.rs  mod.rs  mqtt.rs  state.rs
src/client/mqtt/: mqtt_client.rs  mqtt_listener.rs
src/client/state/: scheme.rs  sensors_state.rs  state_queries.rs
src/model/: mod.rs  protocol.rs  sensor.rs
src/tui_app/: app.rs  theme.rs  tui.rs  utils.rs
src/tui_app/dialog/: confirmation.rs  generic.rs  input.rs  metric.rs  render.rs
src/tui_app/ui_state/: layout.rs  render.rs  state.rs  state_queries.rs
