[package]
name = "sensor-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.21" , features = ["cargo"]}
color-eyre = "0.6.3"
console-subscriber = "0.4.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
emojis = "0.6.4"
eyre = "0.6.12"
log = "0.4.22"
futures = "0.3.31"
paho-mqtt = "0.12.5"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_valid = "0.25.0"
serde_with = "3.11.0"
signal-hook = "0.3.17"
strum = "0.26.3"
tokio = {version = "1.42.0", features = ["full", "tracing"]}
tokio-util = "0.7.13"
tracing = "0.1.41"
x509-certificate = "0.24.0"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["serde"] }
