[package]
name = "sensor-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
chrono = "0.4"
clap = { version = "4.5.21" , features = ["cargo"]}
crossterm = { version = "0.28", features = ["event-stream"] }
emojis = "0.6"
eyre = "0.6"
log = "0.4"
futures = "0.3"
paho-mqtt = "0.12"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_valid = "0.25"
serde_with = "3.11"
strum = "0.26"
strum_macros = "0.26"
taffy = {version = "0.7", features = ["grid"] }
tokio = {version = "1.42", features = ["full", "tracing"]}
x509-certificate = "0.24"
sha2 = "0.10"
uuid = { version = "1.11", features = ["serde"] }
